# granica

./: .env.example  .gitignore  MULTILANGUAGE_README.md  README.md  check_data.py  compile_translations.py  granica_full_dump.json  manage.py  pyproject.toml  recalculate_threat_levels.py  requirements  requirements.txt  test_search.py
archive/bikes_manager/: __init__.py  admin.py  apps.py  models.py
archive/rent_manager/: __init__.py  admin.py  apps.py  models.py  tests.py  views.py
bikes_manager/: __init__.py  admin.py  apps.py  models.py  tests.py  urls.py  views.py
bikes_manager/migrations/: 0001_initial.py  0002_alter_bicycle_options_alter_bicyclemodel_options_and_more.py  0003_bicyclemodelphoto.py  0004_alter_bicyclemodelphoto_photo.py  0005_alter_bicycle_last_maintenance_at.py  0006_alter_bicycle_gps_tracker_id_and_more.py  0007_alter_bicycle_current_battery_pct.py
build-styles/: app.css  customize.css
django_daisy/templatetags/: dash_tags.py
docs/: index.html
docs/demo/: form-submit.html  login.html  manager-panel.html
granica_admin/: asgi.py  settings.py  urls.py  wsgi.py
platform_manager/: admin.py  apps.py  backends.py  choices.py  context_processors.py  forms.py  middleware.py  models.py  navigation.py  urls.py  views.py
platform_manager/migrations/: 0001_initial.py  0002_alter_user_managers_adminuser_permissions_and_more.py  0003_alter_user_phone.py  0004_usergroup.py  0005_delete_usergroup.py  0006_alter_adminuser_options_alter_eventlog_options_and_more.py  0010_alter_user_phone.py  (+15 more)
rent_manager/: __init__.py  admin.py  apps.py  models.py
(+31 files in other folders)
