[project]
name = "deli-bike-admin"
version = "0.1.0"
description = ""
authors = [
    {name = "Vladimir Monomakh",email = "9101423r@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "django-daisy (>=1.1.2,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "django-phone-field (>=1.8.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
